feat: Implementación de búsqueda de autores y optimizaciones
- Nuevas funcionalidades:
  * Búsqueda de autores por nombre con coincidencias parciales
  * Visualización detallada de autores y sus libros
  * Integración en el menú principal como opción 8

- Cambios en archivos:
  * AutorRepository.java:
    - Nuevo método findByNombreSimilar con JPQL
    - Mejorado formato de consultas existentes

  * Principal.java:
    - Nuevo método buscarAutorPorNombre con UI mejorada
    - Optimización de código usando getFirst() en lugar de get(0)
    - Mejorado manejo de nulos y formato de salida

  * README.md:
    - Actualizada documentación con nueva funcionalidad
    - Agregada opción de búsqueda en el menú

- Mejoras técnicas:
  * Uso de JPQL para búsquedas case-insensitive
  * Mejor manejo de colecciones con getFirst()
  * Formato mejorado para la presentación de datos